Extract main file style to src

--- a/src/order/_order.scss
+++ b/src/order/_order.scss
@@ -1,5 +1,5 @@
-@import '_order2.scss';
-@import '_result.scss';
+@import '../order2/_order2';
+@import '../result/_result';
 
 * {
   box-sizing: border-box;
