--- a/src/style.css
+++ b/src/style.css
@@ -199,4 +199,79 @@ body {
   cursor: pointer;
   outline: none;
 }
-/*# sourceMappingURL=order.css.map */
+
+.sign-up-section__fields-user-preferences {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 20px;
+}
+
+.sign-up-section__fields-user-preferences .section-row-order2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 300px;
+}
+
+.sign-up-section__fields-user-preferences .section-row-order2 .title {
+  font-weight: bold;
+  margin: 10px 0;
+}
+
+.sign-up-section__fields-user-preferences .section-row-order2 textarea {
+  height: 150px;
+  width: 200px;
+  margin-left: 40px;
+  outline: none;
+  padding: 5px;
+  resize: none;
+  border-radius: 5px;
+  border: 1px solid #000;
+}
+
+.sign-up-section__fields-user-preferences .section-row-order2 input {
+  margin-top: 5px;
+  margin-left: 40px;
+}
+
+.result {
+  margin-top: 50px;
+  width: 300px;
+  border: 1px solid #000;
+  padding: 10px;
+  background-color: #e7e7e7;
+}
+
+.result h3 {
+  margin: 10px 0;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: sans-serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+/*# sourceMappingURL=style.css.map */
