--- a/src/style.scss
+++ b/src/style.scss
@@ -9,7 +9,8 @@
 }
 
 body {
-  font-family: sans-serif;
   display: flex;
+  background-color: #e8eaed;
+  font-family: sans-serif;
   justify-content: center;
 }
