--- a/src/order/_order.scss
+++ b/src/order/_order.scss
@@ -1,111 +1,17 @@
-$primary-text-color: #030303;
-$active-tab-color: #030303;
+@import './header/_header';
+@import './main/_main';
+@import './footer/_footer';
 
 .sign-up-section {
   background-color: #ffffff;
-  box-shadow: 0 1px 2px 0 rgba(60,64,67,.3),0 1px 3px 1px rgba(60,64,67,.15);
+  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .3), 0 1px 3px 1px rgba(60, 64, 67, .15);
   margin-top: 50px;
   width: 390px;
 }
 
-.sign-up-section__header {
-  display: flex;
-}
-
-.sign-up-section__header-boxes {
-  background-color: #f2f2f2;
-  border: 1px solid #d5d5d5;
-  color: #454545;
-  padding: 12px;
-  text-align: center;
-  width: 100%;
-}
-
-.active-page {
-  background-color: $active-tab-color;
-  border: 1px solid $active-tab-color;
-  color: #ffffff;
-  cursor: pointer;
-}
-
 .sign-up-section__fields-user-info {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
   margin-top: 30px;
-}
-
-.section-row-order {
-  align-items: center;
-  display: flex;
-  flex-direction: row;
-  height: 30px;
-  width: 380px;
-}
-
-.section-row-order > label {
-  color: $primary-text-color;
-  font-weight: bold;
-  user-select: none;
-  padding-bottom: 0;
-  padding-right: 5px;
-  text-align: right;
-  width: 90px;
-}
-
-.section-row-order > input {
-  border: 1px solid $primary-text-color;
-  height: 25px;
-  outline: none;
-  padding: 5px;
-  width: 230px;
-}
-
-.error {
-  font-size: 16px;
-  margin-left: 325px;
-  position: fixed;
-  text-align: left;
-}
-
-.zip-error {
-  margin-left: 245px;
-}
-
-.sign-up-section__address {
-  margin-top: 10px;
-}
-
-.sign-up-section__city > input {
-  width: 150px;
-}
-
-.sign-up-section__state > input {
-  width: 100px;
-}
-
-.sign-up-section__zip > input {
-  width: 150px;
-}
-
-.sign-up-section__footer {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 20px;
-}
-
-.sign-up-section__footer-button {
-  background: $primary-text-color;
-  border: 2px solid $primary-text-color;
-  color: #ffffff;
-  display: flex;
-  cursor: pointer;
-  font-size: 16px;
-  margin: 0 30px 20px;
-  outline: none;
-  padding: 10px 20px;
-}
-
-.footer-button-title {
-  margin-right: 10px;
 }
