--- a/src/style.css
+++ b/src/style.css
@@ -184,15 +184,22 @@
 }
 
 .result {
+  background-color: #ffffff;
+  border: 1px solid #030303;
+  color: #030303;
   margin-top: 50px;
-  width: 300px;
-  border: 1px solid #000;
-  padding: 10px;
-  background-color: #e7e7e7;
+  padding: 20px 30px;
+  width: 390px;
 }
 
-.result h3 {
+.result-title {
   margin: 10px 0;
+  text-align: center;
+}
+
+.result > div {
+  color: #030303;
+  padding-top: 5px;
 }
 
 * {
